styles.css
* {
    margin: 10px;
    padding: auto;
    box-sizing: border-box;
    font-family:'Georgia', Arial, sans-serif;
    background-color:cornsilk;
}

div {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin: 50px;
    text-align: center;
}

p {
    color: white;
    text-align: center;
}
.title-box {
    width: 500px;
    margin: 0 auto;
    padding: 15px;
    text-align: center;
    font-size: 50px;
    color: black;}
.homeblock {display: block;}
.hbox {text-align: center;}

@media (max-width: 768px) {
    div {
        flex-direction: column;
        align-items: center;
        margin: 20px;
    }

    .homeblock {
        width: 100%;
        height: auto;
    }

    .title-box {
        font-size: 30px;
        margin: 20px;
    }
}

